--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^2.4.1",
     "csurf": "^1.11.0",
     "ejs": "^3.1.5",
@@ -21,6 +22,8 @@
     "mongodb": "^3.6.2",
     "mongoose": "^5.10.9",
     "mysql2": "^2.2.5",
+    "nodemailer": "^6.4.14",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "pug": "^3.0.0",
     "sequelize": "^6.3.5"
   },
