--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "nodemailer-sendgrid-transport": "^0.2.0",
     "pdfkit": "^0.11.0",
     "pug": "^3.0.0",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "stripe": "^8.123.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
